multi lingual support added

--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -23,7 +23,7 @@
   "subtotal": "Subtotal",
   "total": "Total",
   "confirm_payment": "Confirm Payment",
-  "menu": "Menu",
+  "menu": "Products",
   "information": "Information",
   "featured_items": "Featured Items",
   "what_they_say": "What They Say ?",
