--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -1,5 +1,5 @@
 {
-  "search_for_nurserys_or_items": "Search for plants or seeds",
+  "search_for_nurserys_or_items": "پودوں یا بیجوں کی تلاش کریں",
   "top_nurserys": "Top Producers",
   "ordered_by_nearby_first": "Ordered by Nearby first",
   "trending_this_week": "Trending This Week",
